--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
     - 'init/*'
     - 'Rakefile'
     - 'vendor/**/*'
+    - 'spec/**/*'
     - 'scratch*.rb'
 
 # Align the elements of a hash literal if they span more than one line.
