--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         # Use `rbenv install -l` and only use the latest stable
         # version of ruby.
-        ruby-version: ["3.0.1", "3.0.6", "3.1.4", "3.2.2"]
+        ruby-version: ["3.0.6", "3.1.4", "3.2.2"]
 
     steps:
       - uses: actions/checkout@v3
