--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         # Use `rbenv install -l` and only use the latest stable
         # version of ruby.
-        ruby-version: ["3.0.6", "3.1.4", "3.2.2"]
+        ruby-version: ["3.2.6", "3.3.7", "3.4.1"]
 
     steps:
       - uses: actions/checkout@v3
@@ -32,10 +32,7 @@ jobs:
       - name: Run a command
         run: date
       - name: Set up Ruby
-        # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-        # change this to (see https://github.com/ruby/setup-ruby#versioning):
-        # uses: ruby/setup-ruby@v1
-        uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
